[tool.poetry]
name = "signal_separation"
version = "0.1.0"
description = ""
authors = ["vitrioil <opm249@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
motor = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
