[tool.poetry]
name = "signal_separation"
version = "0.1.0"
description = ""
authors = ["vitrioil <opm249@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.8"
fastapi = "^0.63.0"
motor = "^2.3.1"
pytest = "^6.2.3"
requests = "^2.25.1"
pydub = "^0.25.1"
numpy = "1.18"
mongo = "^0.2.0"
numba = "0.48"
python-multipart = "^0.0.5"
pytest-asyncio = "^0.14.0"
celery = "^5.0.5"
orjson = "^3.5.2"
uvicorn = {version = "^0.13.4", extras = ["standard"]}
spleeter = "1.5.2"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-jose = {version = "^3.2.0", extras = ["cryptography"]}

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
pytest-celery = "^0.0.0-alpha.1"
asgi-lifespan = "^1.0.1"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
